<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.theater.fragments.ThMainPageCommonStatistic"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/data_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_statistic"
                android:tint="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistic"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/rent_card"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="5dp"
                android:elevation="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_movies"
                    android:tint="@color/smoke_white"
                    android:padding="5dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_toEndOf="@+id/rent_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/was_on_rent"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>


            <TextView
                android:id="@+id/movies_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/session_card"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="5dp"
                android:elevation="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play"
                    android:tint="@color/smoke_white"
                    android:padding="5dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_toEndOf="@+id/session_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showed_session"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>


            <TextView
                android:id="@+id/sessions_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/sales_card"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="5dp"
                android:elevation="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_ticket"
                    android:tint="@color/smoke_white"
                    android:padding="5dp"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_toEndOf="@+id/sales_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sales"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>


            <TextView
                android:id="@+id/tickets_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/all_reports"
                style="@style/TransparentBtn"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/show_all_reports"
                android:textSize="14sp"/>

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/load_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/error_of_network"
            android:textAlignment="center"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/light_gray"/>

</LinearLayout>